tests/snapshots/write_stdin_batch__write_stdin_accepts_multiple_calls@transcript.snap
---
source: tests/write_stdin_batch.rs
expression: snapshot.render_transcript()
---
== session: list_inputs ==
1) repl timeout_ms=10000
>>> x <- 1

2) repl timeout_ms=10000
>>> x + 1
<<< [1] 2
