tests/snapshots/write_stdin_batch__write_stdin_drives_browser@transcript.snap
---
source: tests/write_stdin_batch.rs
expression: snapshot.render_transcript()
---
== session: browser_queue ==
1) repl timeout_ms=10000
>>> f <- function() { browser(); x <- 1; x <- x + 1; x }

2) repl timeout_ms=10000
>>> f()
<<< Called from: f()

3) repl timeout_ms=10000
>>> n
<<< debug at #1: x <- 1

4) repl timeout_ms=10000
>>> n
<<< debug at #1: x <- x + 1

5) repl timeout_ms=10000
>>> c
<<< [1] 2
