tests/snapshots/write_stdin_batch__write_stdin_pager_search@transcript.snap
---
source: tests/write_stdin_batch.rs
expression: transcript
---
== session: pager_search_queue ==
1) r_repl timeout_ms=30000
>>> line <- paste(rep("x", 200), collapse = ""); for (i in 1:200) cat(sprintf("line%04d %s\n", i, line))
<<< line0001 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
<<< --More-- (140p, 0.5%, @0..210/42000)

2) r_repl timeout_ms=30000
>>> :/line0050
<<< [pager] elided output (already shown): @210..10290
<<< [pager] search for `line0050` @10290
<<< --More-- (140p, 0.5%, @0..210/42000)

3) r_repl timeout_ms=30000
>>> :n
<<< [pager] already at the last known search hit for `line0050`
<<< --More-- (140p, 0.5%, @0..210/42000)

4) r_repl timeout_ms=30000
>>> :q
<<< (END, 0.5%, @0..210/42000)
