tests/snapshots/write_stdin_batch__write_stdin_timeout_then_busy_then_recovers.snap
---
source: tests/write_stdin_batch.rs
expression: rendered
---
== session: timeout_list ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "Sys.sleep(5)\n",
    "timeout_ms": 2000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "<<console status: busy, write_stdin timeout reached; elapsed_ms=N>>"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 1000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "<<console status: busy, write_stdin timeout reached; elapsed_ms=N>>"
    },
    {
      "type": "text",
      "text": "[repl] input discarded while worker busy"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "1+1\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[1] 2"
    },
    {
      "type": "text",
      "text": "> "
    }
  ]
}
